# asyncmiele

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: .yamllint-ignore  release.yml  test.yml
asyncmiele/: __init__.py  appliance.py  capabilities.py  enums.py  subscription.py  validation.py
asyncmiele/api/: __init__.py  client.py
asyncmiele/connection/: manager.py  reset.py
asyncmiele/dop2/: __init__.py  client.py  explorer.py  models.py  (+1 more)
docs/: API.md  COMPLETE_SOLUTION_SUMMARY.md  RELEASE.md  capabilities.md  code_improvements.md  connection_optimization.md  dop2_cleanup.md  implementation_plan_remote_start.md  miele_config.md  miele_config_new.md  missing_functions.md  setup_guide.md
examples/: remote_start.py  wake_up.py
scripts/: configure_device_wifi.py  create_device_profile.py  device_diagnosis.py  device_factory_reset.py  discover_devices.py  dop2_explorer.py  dump_program_catalog.py  extract_pymiele_consts.py  generate_credentials.py  get_device_credentials.py  optimized_connection_example.py  provision_device_keys.py  test_capabilities.py  visualize_dop2_tree.py
tests/: __init__.py  test_client.py  test_consumption.py  test_crypto.py  test_dop2_client.py  test_dop2_client_phase2.py  test_dop2_client_phase3.py  test_dop2_enhanced.py  test_dop2_explorer.py  test_dop2_parsed.py  test_dop2_raw.py  test_dop2_visualizer.py  test_enum_mapping.py  test_put_request.py  test_remote_start.py  test_settings_helper.py  test_subscription.py  test_summary.py  test_wakeup.py
(+13 files in other folders)
