[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncmiele"
version = "0.2.0"
authors = [
    {name = "asyncmiele contributors"},
]
description = "Async Python client for Miele@Home devices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "cryptography>=39.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/asyncmiele"
"Bug Tracker" = "https://github.com/yourusername/asyncmiele/issues"

[tool.setuptools]
packages = ["asyncmiele"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
